Perkin-UAT/force-app/main/default/objects/SMAX_PS_Assignment_Policy__mdt/SMAX_PS_Assignment_Policy__mdt.object-meta.xml
<CustomObject>
    <description>Settings to dictate the weights applied when suggesting or auto-assigning technicians to work orders.</description>
    <label>Assignment Policy</label>
    <pluralLabel>Assignment Policies</pluralLabel>
</CustomObject>