Perkin-UAT/force-app/main/default/objects/SMAX_PS_Assignment_Policy__mdt/fields/SMAX_PS_Auto_Assignment_Default__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Auto_Assignment_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this is the metadata type that the auto-assignment will use. This should only be checked on one Assignment Policy.</description>
    <inlineHelpText>When checked, this is the metadata type that the auto-assignment will use. This should only be checked on one Assignment Policy.</inlineHelpText>
    <label>Auto-Assignment Default</label>
    <type>Checkbox</type>
</CustomField>