Perkin-UAT/force-app/main/default/objects/SMAX_PS_Assignment_Policy__mdt/fields/SMAX_PS_Bundling__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Bundling__c</fullName>
    <description>The weight applied to the technician&#39;s bundling score.</description>
    <inlineHelpText>The weight applied to the technician&#39;s bundling score.</inlineHelpText>
    <label>Bundling</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>