Perkin-UAT/force-app/main/default/objects/SMAX_PS_Assignment_Policy__mdt/fields/SMAX_PS_Proximity__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Proximity__c</fullName>
    <description>The weight applied to the technician&#39;s proximity score.</description>
    <inlineHelpText>The weight applied to the technician&#39;s proximity score.</inlineHelpText>
    <label>Proximity</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>