Perkin-UAT/force-app/main/default/objects/SMAX_PS_Assignment_Policy__mdt/listViews/All_Assignment_Policies.listView-meta.xml
<ListView>
    <fullName>All_Assignment_Policies</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SMAX_PS_Availability__c</columns>
    <columns>SMAX_PS_Bundling__c</columns>
    <columns>SMAX_PS_Continuity__c</columns>
    <columns>SMAX_PS_Expertise__c</columns>
    <columns>SMAX_PS_Proximity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assignment Policies</label>
    <language>en_US</language>
</ListView>